[gd_scene load_steps=2 format=3 uid="uid://clsmtvvu3tgia"]

[ext_resource type="Script" path="res://scripts/sanity/sanity_bar.gd" id="1_lkndy"]

[node name="SanityBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lkndy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
value = 50.0
allow_greater = true
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ProgressBar"]
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -11.5
offset_right = 28.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "SANITY"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="SanityLoss" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="FuryTime" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[connection signal="timeout" from="SanityLoss" to="." method="_on_sanity_loss_timeout"]
[connection signal="timeout" from="FuryTime" to="." method="_on_fury_time_timeout"]
